--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
         </div>
 
         <!-- Hero Button -->
-         <button class="join-btn">Join Community</button>
-         <button class="learn-btn">Learn More &#10230</button>
+         <div class="btn">
+        <button class="join-btn">Join the Circle</button>
+         <button class="learn-btn">Learn More <span>&#10230</span></button>
+         </div>
+ 
 
          <!-- Landing-image -->
           <div class="landing-image">
@@ -55,19 +58,33 @@
     </section>
 
     <!-- carousel-section -->
-     <div class="carousel-section">
-        <img src="images/microsoft.png" alt="">
-        <img src="images/chat.png" alt="">
-        <img src="images/vercel.png" alt="">
-        <img src="images/puma.png" alt="">
-        <img src="images/ralph.png" alt="">
-        <img src="images/apple.png" alt="">
-        <img src="images/ai.png" alt="">
-        <img src="images/bulb.png" alt="">
-        <img src="images/jaja.png" alt="">
-        <img src="images/gsk.png" alt="">
-        <img src="images/microsoft.png" alt="">
-     </div>
+  <div class="carousel-section">
+  <div class="carousel-track">
+    <img src="images/microsoft.png" alt="">
+    <img src="images/chat.png" alt="">
+    <img src="images/vercel.png" alt="">
+    <img src="images/puma.png" alt="">
+    <img src="images/ralph.png" alt="">
+    <img src="images/apple.png" alt="">
+    <img src="images/ai.png" alt="">
+    <img src="images/bulb.png" alt="">
+    <img src="images/jaja.png" alt="">
+    <img src="images/gsk.png" alt="">
+
+    <!-- Duplicate the images for seamless loop -->
+    <img src="images/microsoft.png" alt="">
+    <img src="images/chat.png" alt="">
+    <img src="images/vercel.png" alt="">
+    <img src="images/puma.png" alt="">
+    <img src="images/ralph.png" alt="">
+    <img src="images/apple.png" alt="">
+    <img src="images/ai.png" alt="">
+    <img src="images/bulb.png" alt="">
+    <img src="images/jaja.png" alt="">
+    <img src="images/gsk.png" alt="">
+  </div>
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
